--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,22 +2,15 @@ spring.application.name=qrccodegeneratorall
 server.port=8080   
 # = DATA SOURCE
 # ===============================
-spring.datasource.url=jdbc:mysql://localhost:3306/qrcode
-spring.datasource.username=root
-spring.datasource.password=Shashank@2001
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# PostgreSQL connection
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASS}
 
-# ===============================
-# = JPA / HIBERNATE
-# ===============================
-# Show SQL queries in console
+# Hibernate dialect for PostgreSQL
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# Optional settings
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 
-# Format SQL output
-spring.jpa.properties.hibernate.format_sql=true
-
-# Hibernate ddl auto (create, create-drop, update, validate, none)
-spring.jpa.hibernate.ddl-auto=update
-
-# Dialect for MySQL
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
