--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=qrccodegeneratorall
-server.port=8080   
+server.port=${PORT:8080} 
 # = DATA SOURCE
 # ===============================
 # PostgreSQL connection
