--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,7 @@
-spring.application.name=qrccodegeneratorall
-server.port=${PORT:8080} 
-# = DATA SOURCE
-# ===============================
-# PostgreSQL connection
-spring.datasource.url=${DB_URL}
-spring.datasource.username=${DB_USER}
-spring.datasource.password=${DB_PASS}
+spring.application.name=QRcode
 
-# Hibernate dialect for PostgreSQL
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+# MongoDB Atlas Connection
+spring.data.mongodb.uri=${MONGO_URI}
 
-# Optional settings
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-
+# (Optional) specify the database name explicitly
+spring.data.mongodb.database=qrcode_db
