--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,27 @@
-spring.application.name=QRcode
+# ===============================
+# Server Config
+# ===============================
+server.port=8080
 
-# MongoDB Atlas Connection
-spring.data.mongodb.uri=${MONGO_URI}
+# ===============================
+# PostgreSQL Database Config
+# ===============================
+spring.datasource.url=jdbc:postgresql://dpg-d2pfj7be5dus73b37vl0-a.oregon-postgres.render.com:5432/qrcode_db_a71a
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASS}
+spring.datasource.driver-class-name=org.postgresql.Driver
 
-# (Optional) specify the database name explicitly
-spring.data.mongodb.database=qrcode_db
+# ===============================
+# JPA / Hibernate Config
+# ===============================
+spring.jpa.database=POSTGRESQL
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+# This controls schema generation (use update in dev, validate in prod)
+spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# Prevent Hibernate from calling unsupported createClob()
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
