updated the application

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ server.port=8080
 # ===============================
 # PostgreSQL Database Config
 # ===============================
-spring.datasource.url=${DB_URL}
+spring.datasource.url=jdbc:postgresql://dpg-d2pfj7be5dus73b37vl0-a.oregon-postgres.render.com:5432/qrcode_db_a71a
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASS}
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -14,14 +14,9 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 # ===============================
 # JPA / Hibernate Config
 # ===============================
-spring.jpa.database=POSTGRESQL
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-
-# This controls schema generation (use update in dev, validate in prod)
 spring.jpa.hibernate.ddl-auto=update
 
+# (Optional for debugging)
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-
-# Prevent Hibernate from calling unsupported createClob()
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
