--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,15 +6,17 @@ server.port=8080
 # ===============================
 # PostgreSQL Database Config
 # ===============================
-spring.datasource.url=jdbc:postgresql://dpg-d2pfj7be5dus73b37vl0-a.oregon-postgres.render.com:5432/qrcode_db_a71a
+spring.datasource.url=jdbc:postgresql://dpg-d2pfj7be5dus73b37vl0-a.oregon-postgres.render.com:5432/qrcode_db_a71a?sslmode=require
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASS}
 spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.hikari.maximum-pool-size=5
 
 # ===============================
 # JPA / Hibernate Config
 # ===============================
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 # (Optional for debugging)
 spring.jpa.show-sql=true
