--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ server.port=8080
 # ===============================
 # PostgreSQL Database Config
 # ===============================
-spring.datasource.url=jdbc:postgresql://dpg-d2pfj7be5dus73b37vl0-a.oregon-postgres.render.com:5432/qrcode_db_a71a?sslmode=require
+spring.datasource.url=spring.datasource.url=jdbc:postgresql://dpg-d343tcvfte5s73eeprhg-a:5432/qrcode_db_cmr9?sslmode=require
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASS}
 spring.datasource.driver-class-name=org.postgresql.Driver
